--- a/Changes
+++ b/Changes
@@ -1,9 +1,10 @@
 Revision history for Firefox-Marionette
 
-1.01  Sat Nov 14 20:57:00 2020
+1.00_02  Mon Nov 16 08:12:00 2020
        Added README.md
+       Added github reference
 
-1.00  Sat Nov 14 20:42:00 2020
+1.00_01  Sat Nov 14 20:42:00 2020
        Adding add_header method.
        Adding application.ini support in attempt to fix RT#133427. 
 
