Adding support for add_site_header and delete_site_header

--- a/README
+++ b/README
@@ -63,25 +63,51 @@ SUBROUTINES/METHODS
 
     accepts a hash of HTTP headers to include in every future HTTP Request.
 
+        use Firefox::Marionette();
+        use UUID();
+    
+        my $firefox = Firefox::Marionette->new();
+        my $uuid = UUID::uuid();
         $firefox->add_header( 'Track-my-automated-tests' => $uuid );
+        $firefox->go('https://metacpan.org/');
 
     these headers are added to any existing headers. To clear headers, see
     the delete_header method
 
-        $firefox->delete_header( 'Accept' );
-        $firefox->add_header( 'Accept' => 'text/perl' );
+        use Firefox::Marionette();
+    
+        my $firefox = Firefox::Marionette->new()->delete_header( 'Accept' )->add_header( 'Accept' => 'text/perl' )->go('https://metacpan.org/');
 
     will only send out an Accept
     <https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Accept>
     header that looks like Accept: text/perl.
 
-        $firefox->add_header( 'Accept' => 'text/perl' );
+        use Firefox::Marionette();
+    
+        my $firefox = Firefox::Marionette->new()->add_header( 'Accept' => 'text/perl' )->go('https://metacpan.org/');
 
     by itself, will send out an Accept
     <https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Accept>
     header that may resemble Accept:
     text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,*/*;q=0.8,
     text/perl. This method returns itself to aid in chaining methods.
+
+ add_site_header
+
+    accepts a host name and a hash of HTTP headers to include in every
+    future HTTP Request that is being sent to that particular host.
+
+        use Firefox::Marionette();
+        use UUID();
+    
+        my $firefox = Firefox::Marionette->new();
+        my $uuid = UUID::uuid();
+        $firefox->add_site_header( 'metacpan.org', 'Track-my-automated-tests' => $uuid );
+        $firefox->go('https://metacpan.org/');
+
+    these headers are added to any existing headers going to the
+    metacpan.org site, but no other site. To clear site headers, see the
+    delete_site_header method
 
  addons
 
@@ -297,6 +323,9 @@ SUBROUTINES/METHODS
     accepts a list of HTTP header names to delete from future HTTP
     Requests.
 
+        use Firefox::Marionette();
+    
+        my $firefox = Firefox::Marionette->new();
         $firefox->delete_header( 'User-Agent', 'Accept', 'Accept-Encoding' );
 
     will remove the User-Agent
@@ -312,6 +341,26 @@ SUBROUTINES/METHODS
  delete_session
 
     deletes the current WebDriver session.
+
+ delete_site_header
+
+    accepts a host name and a list of HTTP headers names to delete from
+    future HTTP Requests.
+
+        use Firefox::Marionette();
+    
+        my $firefox = Firefox::Marionette->new();
+        $firefox->delete_header( 'metacpan.org', 'User-Agent', 'Accept', 'Accept-Encoding' );
+
+    will remove the User-Agent
+    <https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/User-Agent>,
+    Accept
+    <https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Accept> and
+    Accept-Encoding
+    <https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Accept-Encoding>
+    headers from all future requests to metacpan.org.
+
+    This method returns itself to aid in chaining methods.
 
  developer
 
