--- a/README
+++ b/README
@@ -854,8 +854,9 @@ SUBROUTINES/METHODS
       checking for the lastest malware/phishing sites, updates to
       firefox/etc. This option is therefore off ("0") by default, however,
       it can be switched on ("1") if required. Even with chatty switched
-      off, connections to firefox.settings.services.mozilla.com may still
-      be made. The only way to prevent this seems to be to set
+      off, connections to firefox.settings.services.mozilla.com will still
+      be made <https://bugzilla.mozilla.org/show_bug.cgi?id=1598562#c13>.
+      The only way to prevent this seems to be to set
       firefox.settings.services.mozilla.com to 127.0.0.1 via /etc/hosts
       <https://en.wikipedia.org/wiki//etc/hosts>. NOTE: that this option
       only works when profile_name/profile is not specified.
