Adding documentation to css method

--- a/README
+++ b/README
@@ -20,6 +20,8 @@ SYNOPSIS
     
         $firefox->find_class('container-fluid')->find_id('search-input')->type('Test::More');
     
+        say "Height of search box is " . $firefox->find_class('container-fluid')->css('height');
+    
         my $file_handle = $firefox->selfie();
     
         $firefox->find('//button[@name="lucky"]')->click();
@@ -291,6 +293,12 @@ SUBROUTINES/METHODS
     accepts an element as the first parameter and a scalar CSS property
     name as the second parameter. It returns the value of the computed
     style for that property.
+
+        use Firefox::Marionette();
+        use v5.10;
+    
+        my $firefox = Firefox::Marionette->new()->go('https://metacpan.org/');
+        say $firefox->find_id('search-input')->css('height');
 
  current_chrome_window_handle
 
