--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Firefox-Marionette
 
+1.05  Thu May  6 22:15:00 2021
+       Fixing UTF-8 handling for strip/json methods.
+
 1.04  Wed May  5 06:42:00 2021
        Fixing bugs GH#2 to GH#6.
        Adding xvfb_display and xvfb_authority methods
