--- a/README
+++ b/README
@@ -1063,13 +1063,15 @@ SUBROUTINES/METHODS
 
       * console - show the browser console
       <https://developer.mozilla.org/en-US/docs/Tools/Browser_Console/>
-      when the browser is launched.
+      when the browser is launched. This defaults to "0" (off).
 
       * debug - should firefox's debug to be available via STDERR. This
       defaults to "0". Any ssh connections will also be printed to STDERR.
+      This defaults to "0" (off).
 
       * developer - only allow a developer edition
       <https://www.mozilla.org/en-US/firefox/developer/> to be launched.
+      This defaults to "0" (off).
 
       * firefox - use the specified path to the Firefox
       <https://firefox.org/> binary, rather than the default path.
@@ -1100,7 +1102,7 @@ SUBROUTINES/METHODS
 
       * nightly - only allow a nightly release
       <https://www.mozilla.org/en-US/firefox/channel/desktop/#nightly> to
-      be launched.
+      be launched. This defaults to "0" (off).
 
       * port - if the "host" parameter is also set, use ssh
       <https://man.openbsd.org/ssh.1> to create and automate firefox via
