adding chrome and content methods as an alternative to context for chaining methods

--- a/README
+++ b/README
@@ -216,6 +216,22 @@ SUBROUTINES/METHODS
     This method returns the $? (CHILD_ERROR) for the Firefox process, or
     undefined if the process has not yet exited.
 
+ chrome
+
+    changes the scope of subsequent commands to chrome context. This allows
+    things like interacting with firefox menu's and buttons outside of the
+    browser window.
+
+        use Firefox::Marionette();
+        use v5.10;
+    
+        my $firefox = Firefox::Marionette->new()->chrome();
+        $firefox->script(...); # running script in chrome context
+        $firefox->content();
+
+    See the context method for an alternative methods for changing the
+    context.
+
  chrome_window_handle
 
     returns an server-assigned integer identifiers for the current chrome
@@ -262,6 +278,22 @@ SUBROUTINES/METHODS
     closes the current window/tab. It returns a list of still available
     window/tab handles.
 
+ content
+
+    changes the scope of subsequent commands to browsing context. This is
+    the default for when firefox starts and restricts commands to operating
+    in the browser window only.
+
+        use Firefox::Marionette();
+        use v5.10;
+    
+        my $firefox = Firefox::Marionette->new()->chrome();
+        $firefox->script(...); # running script in chrome context
+        $firefox->content();
+
+    See the context method for an alternative methods for changing the
+    context.
+
  context
 
     accepts a string as the first parameter, which may be either 'content'
@@ -272,9 +304,15 @@ SUBROUTINES/METHODS
         use v5.10;
     
         my $firefox = Firefox::Marionette->new();
+        if ($firefox->context() eq 'content') {
+           say "I knew that was going to happen";
+        }
         my $old_context = $firefox->context('chrome');
         $firefox->script(...); # running script in chrome context
         $firefox->context($old_context);
+
+    See the content and chrome methods for alternative methods for changing
+    the context.
 
  cookies
 
