Implementing X.509 Certificate support for the Firefox certificate database.

--- a/README
+++ b/README
@@ -55,6 +55,33 @@ SUBROUTINES/METHODS
     returns the active element of the current browsing context's document
     element, if the document element is non-null.
 
+ add_certificate
+
+    accepts a hash as a parameter and adds the specified certificate to the
+    Firefox database with the supplied or default trust. Allowed keys are
+    below;
+
+      * path - a file system path to a single PEM encoded X.509 certificate
+      <https://datatracker.ietf.org/doc/html/rfc7468#section-5>.
+
+      * string - a string containg a single PEM encoded X.509 certificate
+      <https://datatracker.ietf.org/doc/html/rfc7468#section-5>
+
+      * trust - This is the trustargs
+      <https://www.mankier.com/1/certutil#-t> value for NSS
+      <https://wiki.mozilla.org/NSS>. If defaults to 'C,,';
+
+        use Firefox::Marionette();
+    
+        my $pem_encoded_string = <<'_PEM_';
+        -----BEGIN CERTIFICATE-----
+        MII..
+        -----END CERTIFICATE-----
+        _PEM_
+        my $firefox = Firefox::Marionette->new()->add_certificate(string => $pem_encoded_string);
+
+    This method returns itself to aid in chaining methods.
+
  add_cookie
 
     accepts a single cookie object as the first parameter and adds it to
@@ -211,6 +238,40 @@ SUBROUTINES/METHODS
     returns the capabilities of the current firefox binary. You can
     retrieve timeouts or a proxy with this method.
 
+ certificate_as_pem
+
+    accepts a certificate stored in the Firefox database as a parameter and
+    returns a PEM encoded X.509 certificate
+    <https://datatracker.ietf.org/doc/html/rfc7468#section-5> as a string.
+
+        use Firefox::Marionette();
+    
+        my $firefox = Firefox::Marionette->new();
+    
+        # Generating a ca-bundle.crt to STDOUT from the current firefox instance
+    
+        foreach my $certificate (sort { $a->display_name() cmp $b->display_name } $firefox->certificates()) {
+            if ($certificate->is_ca_cert()) {
+                print '# ' . $certificate->display_name() . "\n" . $firefox->certificate_as_pem($certificate) . "\n";
+            }
+        }
+
+ certificates
+
+    returns a list of all known certificates in the Firefox database.
+
+        use Firefox::Marionette();
+        use v5.10;
+    
+        # Sometimes firefox can neglect old certificates.  See https://bugzilla.mozilla.org/show_bug.cgi?id=1710716
+    
+        my $firefox = Firefox::Marionette->new();
+        foreach my $certificate (grep { $_->is_ca_cert() && $_->not_valid_after() < time } $firefox->certificates()) {
+            say "The " . $certificate->display_name() " . certificate has expired and should be removed";
+        }
+
+    This method returns itself to aid in chaining methods.
+
  child_error
 
     This method returns the $? (CHILD_ERROR) for the Firefox process, or
@@ -345,6 +406,26 @@ SUBROUTINES/METHODS
  current_chrome_window_handle
 
     see chrome_window_handle.
+
+ delete_certificate
+
+    accepts a certificate stored in the Firefox database as a parameter and
+    deletes/distrusts the certificate from the Firefox database.
+
+        use Firefox::Marionette();
+        use v5.10;
+    
+        my $firefox = Firefox::Marionette->new();
+        foreach my $certificate ($firefox->certificates()) {
+            if ($certificate->is_ca_cert()) {
+                $firefox->delete_certificate($certificate);
+            } else {
+                say "This " . $certificate->display_name() " certificate is NOT a certificate authority, therefore it is not being deleted";
+            }
+        }
+        say "Good luck visiting a HTTPS website!";
+
+    This method returns itself to aid in chaining methods.
 
  delete_cookie
 
@@ -1237,15 +1318,10 @@ SUBROUTINES/METHODS
       reconnect parameter for an experimental technique for reconnecting.
 
       * trust - give a path to a root certificate
-      <https://en.wikipedia.org/wiki/Root_certificate> that will be trusted
-      for this session. The certificate will be imported by the NSS
-      certutil
-      <https://developer.mozilla.org/en-US/docs/Mozilla/Projects/NSS/tools/NSS_Tools_certutil>
-      binary. If this binary does not exist in the PATH
-      <https://en.wikipedia.org/wiki/PATH_(variable)>, an exception will be
-      thrown. For Linux/BSD systems, NSS certutil should be available via
-      your package manager. For OS X and Windows based platforms, it will
-      be more difficult.
+      <https://en.wikipedia.org/wiki/Root_certificate> encoded as a PEM
+      encoded X.509 certificate
+      <https://datatracker.ietf.org/doc/html/rfc7468#section-5> that will
+      be trusted for this session.
 
       * timeouts - a shortcut to allow directly providing a timeout object,
       instead of needing to use timeouts from the capabilities parameter.
@@ -1974,6 +2050,10 @@ ACKNOWLEDGEMENTS
     creating the HAR Export Trigger
     <https://github.com/firefox-devtools/har-export-trigger> extension for
     Firefox.
+
+    Thanks to Mike Kaply <https://mike.kaply.com/about/> for his post
+    <https://mike.kaply.com/2015/02/10/installing-certificates-into-firefox/>
+    describing importing certificates into Firefox.
 
     Thanks also to the authors of the documentation in the following
     sources;
