--- a/README
+++ b/README
@@ -1328,9 +1328,10 @@ SUBROUTINES/METHODS
       Overrides the timeouts provided (if any) in the capabilities
       parameter.
 
-      * port - if the "host" parameter is also set, use ssh
+      * user - if the "host" parameter is also set, use ssh
       <https://man.openbsd.org/ssh.1> to create and automate firefox with
-      the specified user. See REMOTE AUTOMATION OF FIREFOX VIA SSH.
+      the specified user. See REMOTE AUTOMATION OF FIREFOX VIA SSH. The
+      user will default to the current user name.
 
       * visible - should firefox be visible on the desktop. This defaults
       to "0".
