--- a/README
+++ b/README
@@ -71,6 +71,8 @@ SUBROUTINES/METHODS
       <https://www.mankier.com/1/certutil#-t> value for NSS
       <https://wiki.mozilla.org/NSS>. If defaults to 'C,,';
 
+    This method returns itself to aid in chaining methods.
+
         use Firefox::Marionette();
     
         my $pem_encoded_string = <<'_PEM_';
@@ -79,8 +81,6 @@ SUBROUTINES/METHODS
         -----END CERTIFICATE-----
         _PEM_
         my $firefox = Firefox::Marionette->new()->add_certificate(string => $pem_encoded_string);
-
-    This method returns itself to aid in chaining methods.
 
  add_cookie
 
@@ -129,20 +129,19 @@ SUBROUTINES/METHODS
 
     accepts a hash of the following keys;
 
-      * host - The origin, not hostname, to which the login applies, for
-      example 'https://www.example.org'.
+      * host - The scheme + hostname of the page where the login applies,
+      for example 'https://www.example.org'.
 
       * user - The username for the login.
 
       * password - The password for the login.
 
-      * origin - The origin, not URL, a form-based login was submitted to
+      * origin - The scheme + hostname that the form-based login was
+      submitted to
       <https://developer.mozilla.org/en-US/docs/Web/HTML/Element/form#attr-action>.
-      For logins obtained from HTML forms, this field is the action
-      attribute from the form element, with the path removed (for example,
-      "https://example.org"). Forms with no action attribute default to
-      submitting to their origin URL, so that is stored here. This field
-      should be omitted (it will be set to undef) for http auth type
+      Forms with no action attribute default to submitting to the URL of
+      the page containing the login form, so that is stored here. This
+      field should be omitted (it will be set to undef) for http auth type
       authentications and "" means to match against any form action.
 
       * realm - The HTTP Realm for which the login was requested. When an
@@ -150,15 +149,13 @@ SUBROUTINES/METHODS
       a realm. See RFC 2617
       <https://datatracker.ietf.org/doc/html/rfc2617>. If the realm is not
       specified, or it was blank, the hostname is used instead. For HTML
-      form logins, this field is null.
+      form logins, this field should not be specified.
 
       * user_field - The name attribute for the username input in a form.
-      Non-form logins should specify an empty string (""), which it will
-      default to if not specified.
+      Non-form logins should not specify this field.
 
       * password_field - The name attribute for the password input in a
-      form. Non-form logins should specify an empty string (""), which it
-      will default to if not specified.
+      form. Non-form logins should not specify this field.
 
     or a Firefox::Marionette::Login object as the first parameter and adds
     the login to the Firefox login database.
@@ -181,7 +178,7 @@ SUBROUTINES/METHODS
     
         # or just directly
     
-        $firefox->add_login(host => 'https://github.com/login', user => 'me2@example.org', password => 'uiop[]', user_field => 'login', password_field => 'password');
+        $firefox->add_login(host => 'https://github.com', user => 'me2@example.org', password => 'uiop[]', user_field => 'login', password_field => 'password');
 
     This method returns itself to aid in chaining methods.
 
@@ -1534,9 +1531,6 @@ SUBROUTINES/METHODS
 
  pdf
 
-    returns a File::Temp object containing a PDF encoded version of the
-    current page for printing.
-
     accepts a optional hash as the first parameter with the following
     allowed keys;
 
@@ -1564,6 +1558,9 @@ SUBROUTINES/METHODS
 
       * shrink_to_fit - Whether or not to override page size as defined by
       CSS. Boolean value. Defaults to true.
+
+    returns a File::Temp object containing a PDF encoded version of the
+    current page for printing.
 
         use Firefox::Marionette();
     
