Updating README and README.md for subclassing and change to binary parameter

--- a/README
+++ b/README
@@ -268,6 +268,10 @@ SUBROUTINES/METHODS
     before returning, which, by default is 5 minutes. This method returns
     itself to aid in chaining methods.
 
+ default_binary_name
+
+    just returns the string 'firefox'. Only of interest when sub-classing.
+
  browser_version
 
     This method returns the current version of firefox.
@@ -1277,6 +1281,13 @@ SUBROUTINES/METHODS
             # redirecting to Test::More page
         }
 
+ macos_binary_paths
+
+    returns a list of filesystem paths that this module will check for
+    binaries that it can automate when running on MacOS
+    <https://en.wikipedia.org/wiki/MacOS>. Only of interest when
+    sub-classing.
+
  marionette_protocol
 
     returns the version for the Marionette protocol. Current most recent
@@ -1333,6 +1344,9 @@ SUBROUTINES/METHODS
       * addons - should any firefox extensions and themes be available in
       this session. This defaults to "0".
 
+      * binary - use the specified path to the Firefox
+      <https://firefox.org/> binary, rather than the default path.
+
       * capabilities - use the supplied capabilities object, for example to
       set whether the browser should accept insecure certs or whether the
       browser should use a proxy.
@@ -1359,9 +1373,6 @@ SUBROUTINES/METHODS
       * developer - only allow a developer edition
       <https://www.mozilla.org/en-US/firefox/developer/> to be launched.
       This defaults to "0" (off).
-
-      * firefox - use the specified path to the Firefox
-      <https://firefox.org/> binary, rather than the default path.
 
       * height - set the height
       <http://kb.mozillazine.org/Command_line_arguments#List_of_command_line_arguments_.28incomplete.29>
@@ -1935,6 +1946,18 @@ SUBROUTINES/METHODS
 
     returns the current URI of current top level browsing context for
     Desktop. It is equivalent to the javascript document.location.href
+
+ win32_organisation
+
+    accepts a parameter of a Win32 product name and returns the matching
+    organisation. Only of interest when sub-classing.
+
+ win32_product_names
+
+    returns a hash of known Windows product names (such as 'Mozilla
+    Firefox') with priority orders. The lower the priority will determine
+    the order that this module will check for the existance of this
+    product. Only of interest when sub-classing.
 
  window_handle
 
